--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Shadows Into Light', cursive; /* Change to your desired font */
+    font-family: 'Shadows Into Light', cursive; 
     color: white;
 }
 
